# TeleRecap

./: .gitignore  .replit  bot_session.session  generate_session.py  get_telegram_client.py  main.py  pyproject.toml  rag.py  requirements.txt  setup.py  user_session.session
tools/: get_telegram_username.py
